Fix: Restructure checkout for code build
Change-Id: I2d9ac41b42b46b616da49c24dc127df9fb5ce31c
Signed-off-by: Matthew Watkins <mwatkins@linuxfoundation.org>

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,9 +1,29 @@
 # SPDX-License-Identifier: Apache-2.0
 # SPDX-FileCopyrightText: 2025 The Linux Foundation
 
-# The below are appropriate for Python projects
-# Define separate root directories for sources and tests
+# SonarQube project configuration
 sonar.organization=o-ran-sc
 sonar.projectKey=nonrtric-plt-rappmanager
-# sonar.sources = src/
-# sonar.tests = tests/
+
+# Multi-module Maven project configuration
+# Source directories
+sonar.sources=rapp-manager-models/src/main/java,rapp-manager-dme/src/main/java,rapp-manager-acm/src/main/java,rapp-manager-sme/src/main/java,rapp-manager-application/src/main/java
+
+# Test directories
+sonar.tests=rapp-manager-models/src/test/java,rapp-manager-dme/src/test/java,rapp-manager-acm/src/test/java,rapp-manager-sme/src/test/java,rapp-manager-application/src/test/java
+
+# Binary directories (compiled .class files)
+sonar.java.binaries=rapp-manager-models/target/classes,rapp-manager-dme/target/classes,rapp-manager-acm/target/classes,rapp-manager-sme/target/classes,rapp-manager-application/target/classes
+
+# Test binary directories
+sonar.java.test.binaries=rapp-manager-models/target/test-classes,rapp-manager-dme/target/test-classes,rapp-manager-acm/target/test-classes,rapp-manager-sme/target/test-classes,rapp-manager-application/target/test-classes
+
+# Library directories (dependencies)
+sonar.java.libraries=rapp-manager-models/target/*.jar,rapp-manager-dme/target/*.jar,rapp-manager-acm/target/*.jar,rapp-manager-sme/target/*.jar,rapp-manager-application/target/*.jar
+
+# Java version
+sonar.java.source=17
+sonar.java.target=17
+
+# Encoding
+sonar.sourceEncoding=UTF-8
